theme.css
@import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css);

/* Win Phone 8.1 + fix */
@-ms-viewport       { width: device-width; }

/* Main */
.col-centered {
 float: none;
 margin: 0 auto;
}

@media (max-width: 460px) {
  #thePicturePage .navbar-brand,
  #theCategoryPage .navbar-brand {
    height: 100%;
    width: 80%;
  }
}

.content-grid .col-inner .caption h4.title {
  position: relative;
}
.content-grid .col-inner .caption h4.title a.recent {
  padding-right: 16px;
}
.content-grid .col-inner .caption h4.title img {
  position: absolute;
  top: 6px;
  right: 0;
}

/* Jumbotron */
.jumbotron {
  background-color: #2e2e2e;
}

/* Rating */
#rating .rateButtonStarFull {
  position: relative;
  top: 1px;
  display: inline-block;
  font-family: 'Glyphicons Halflings';
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}
#rating .rateButtonStarFull:before {
  content: "\e006";
}
#rating .rateButtonStarEmpty {
  position: relative;
  top: 1px;
  display: inline-block;
  font-family: 'Glyphicons Halflings';
  font-style: normal;
  font-weight: normal;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  cursor: pointer;
}
#rating .rateButtonStarEmpty:before {
  content: "\e007";
}

/* Info tabs */
#info-content { margin: 0 10px; }
@media (min-width: 768px) {
  #infopanel .dl-horizontal dt {
      width: 220px;
  }
  .dl-horizontal dd {
      margin-left: 240px;
  }
}

/* Carousel */
#thumbnailCarousel {
  display: none; /* hide initially until page is loaded */
  padding-top: 1em;
  padding-bottom: 1.5em;
}
.slick-slide img { display: inherit !important; }
.slick-slide, .slick-slide *{ outline: none !important; }
.slick-list { padding: 10px 0 !important; }

/* Shadows */
#theImage {
  padding-bottom: 1em;
}
.placeholder>img,
#theImage>img,
.slick-slide>a>img,
.col-thumbnail>div>img {
  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12), 0 3px 5px -1px rgba(0, 0, 0, .2);
}
.thumbnail-active>a>img {
  border: 1px solid white;
}

/* hide jQM loading text */
.ui-loader { display: none; }

/* PhotoSwipe */
.pswp__ui--idle .pswp__caption { opacity: 0; }
.pswp__button--autoplay { background: none !important; }
.pswp__button--autoplay:before {
  content:"\e072";
  font-family:"Glyphicons Halflings";
  color: #fff;
}
.pswp__button--autoplay.stop { background: none !important; }
.pswp__button--autoplay.stop:before {
  content:"\e074";
  font-family:"Glyphicons Halflings";
  color: #fff;
}

.video-modal {
    background: url(img/play-circle-white.png) no-repeat center center;
    background-size: 128px 128px;
    height: 100%;
    width: 320px;
    margin: 0 auto;
    cursor: pointer;
}
.video-modal video {
    visibility: hidden;
}

/* Wells */
.well-categories { margin-bottom: 10px; }

/*
 * Plugin fixlets
 */

/* Openstreetmap Plugin fixlets */
.pwg-icon-globe {
  font-family: none !important;
  line-height: none !important;
}
.pwg-icon-globe:before {
  content:"\e135";
  font-family:"Glyphicons Halflings";
}

/* BatchDownloader */
.batch-downloader-icon {
  background: none !important;
  font-family: none !important;
  line-height: none !important;
}
.batch-downloader-icon:before {
  content:"\e197";
  font-family:"Glyphicons Halflings";
}

